<resources>
    <string name="app_name">Venture Adventure</string>
    <string name="welcomeMessage">A Choose-Your-Own Adventure Story of a Young Entrepreneur</string>
    <string name="startAdventure">Start the adventure \=\></string>
    <string name="chapter1">Chapter 1</string>
    <string name="chapter2">Chapter 2</string>
    <string name="chapter3">Chapter 3</string>
    <string name="chapter4">Chapter 4</string>
    <string name="chapter5">Chapter 5</string>
    <string name="chapter6">Chapter 6</string>
    <string name="chapter7">Chapter 7</string>
    <string name="chapter8">Chapter 8</string>
    <string name="chapter9">Chapter 9</string>
    <string name="continueText">Continue</string>
    <string name="optionsText">You choose what happens next: </string>
    <string name="endText">End the story.</string>
    <string name="part_3B_option_1_good">
        Buzz decides to start a business.
    </string>
    <string name="part_3B_result_option_2_bad">
        Buzz spent the next month searching for work. Eventually he settled for a job that he did not want. It did not pay
        much, and he was not likely to learn much doing the work. However, he stuck with it. He stayed in his job for years,
        actually. He felt that the job was sucking the life out of him, but he appreciated that is was stable.
        \n\nHe sometimes had the urge to try to start a business, but he suppressed the urge. Eventually instead of having
        the desire to start a business, he just thought wishfully about it. He wondered what would have become of his life
        if he had tried to start a business. He saw new businesses start up in his town and thought how that might have been
        exciting to be the one to start that up.
        \n\n“Oh, well”, Buzz thought. “Some people are just not meant to have success,” he said with a sigh.
        \n\nThis is the end of the story, but would you like to know what would have happened to Buzz if he tried to start
        a business?
    </string>
    <string name="part_4">
        This morning Buzz woke up feeling good about starting a business. As he came to the table for breakfast, he looked at the
        eggs his mom had made. “Maria’s eggs,” he said.
        \n\n“That is right,” his mom replied.
        \n\n“I am going to start a business like Maria did,” Buzz announced.
        \n\n“That is wonderful, Buzz,” his mom encouraged. She then added “it will not be easy, you know.”
        \n\n“I know, but I am going to do it,” Buzz replied.
        \n\nLeo joined in on the encouragement. “I am sure you can do, it Buzz. You are smart.” That made Buzz smile. “Hey Mom,” Leo
        said moving on, “do we have any bread today?”
        \n\nHis mom answered, “sorry, Leo. We do not have bread today.”
        \n\nBuzz only partially heard the rest of the conversation. His mind was wandering through the possibilities of starting a
        business. He definitely wanted to do it. He just needed to figure out what type of business to start.
        \n\nBuzz thought about it most of the day. Sometime around lunch he decided, he could not wait to tell his family that
        evening.
        \n\n“I am going to start a fishing business like Frankie” Buzz told his family during dinner.
        \n\n“Fishing, huh?” his mother replied.
        \n\n“Yeah, Frankie already told me a bunch about it, he was already successful at it, so I could be too,” Buzz said
        confidently.
        \n\nHis mom looked a bit worried. “Frankie’s Fish already has low prices, lots of variety, and everyone trusts them…” she
        pointed out.
        \n\n“I think I will start fishing tomorrow, and then try to sell it. Frankie said he started small like that,” Buzz reported.
        \n\nHis mom’s comment hadn’t registered yet.
        \n\nHis mom replied, “that may be how the business started, but now it is quite the fish store to compete with. You could
        also consider trying to start a different sort of business.”
        \n\nBuzz had liked the idea of a fish story because he already knew how to fish, but he could consider starting a different
        kind of business. “Like what?” said Buzz.
        \n\n“Well,” his mom was searching her brain for an idea, “I am sure there are lots of good options.”
        \n\nThe room was silent for a moment.
        \n\nThen Leo piped up. “How about a bakery?”
        \n\n“Oh, that is a good idea!” His mom said with relief.
        \n\n“But I don’t know how to make bread,” Buzz said with mild objection.
        \n\nHis mom was quick to encourage “I am sure you could learn. I have made bread before, and it is not too hard to do.”
        \n\nBuzz did like the idea. He liked bread.
        \n\n“And,” his mom added with a smile “I sure would appreciate the two of you not asking me for bread all the time.”
        \n\nThat was a lot to think about. Buzz was serious about starting a business, and this was a really big decision. He didn’t
        know how to make bread, but maybe there really was a need for it.
    </string>
    <string name="part_4_option_1_bad">
        Buzz tries to start a fishing business.
    </string>
    <string name="part_4_option_2_good">
        Buzz tries to start a bakery.
    </string>
    <string name="part_6">
        Learning to bake was not as hard as he thought. His mom and brother enjoyed tasting the practice loaves (when they tasted
        good). He soon was confident at making bread.
        \n\nHe brought some sample bread to school to give to those who said they would be willing to buy the bread. They enjoyed
        the bread! They began to be excited about having fresh bread more often. Buzz could not be happier.
        \n\n“So how much does a loaf cost?” A friend asked.
        \n\nBuzz was caught off guard. He had not even thought about how much to charge for his bread. “Well,” he began, “it won’t
        be free… and it won’t be too expensive… Let me get back to you on that.” The friend seemed satisfied with the answer for
        now.
        \n\nBuzz went straight to the Professor. “I have a problem.”
        \n\n“What is it?” the Professor said with concern.
        \n\n“My friends are asking me how much to charge for my bread and I don’t know what to say,” Buzz explained.
        \n\n“That sounds like a good problem to have,” the Professor said with a smile. “So, you brought your bread to school,
        and they
        liked the bread?”
        \n\n“Yes,” Buzz said as a smile came across his face.
        \n\n“Congratulations. You have a solid value proposition. So, yes, next would be pricing, I suppose. This is a very
        important
        aspect about selling a product.” The Professor glanced at Buzz before beginning an impromptu lesson. “Let us start with
        what profit means. Profits is how much money a company makes after it has paid for everything. It is equal to all of the
        revenue (which is money that the business brings in) minus all of the costs. In order for your business to be successful,
        your business will need to make more revenue than cost.”
        \n\n“Got it, I think. I need to make more money by selling the bread than it cost for me to make the bread.” Buzz said,
        trying to internalize what the Professor was saying.
        \n\n“Exactly. So, for pricing, you can consider two things. One, what is your minimum price? Two, what are people willing
        to
        pay?” The Professor paused. “Let us start with the first one. What does it cost you to make a loaf of bread?”
        \n\n“Well, I spend five dollars on the ingredients, and I was able to make ten loaves of bread,” Buzz said. He thought
        for a
        second and then continued, “so it cost me a half of dollar per loaf of bread. That would be my minimum, then. I cannot
        charge less than half a dollar.”
        \n\n“Correct,” the Professor said proudly. “The next thing to consider is how much people are willing to pay. For that, it
        would be good to look at what people do now. Do you know how much people pay to buy bread now?”
        \n\nBuzz had gone with his mother to buy bread before. It was in a neighboring town, so they did not go frequently. “I
        think
        a loaf of bread cost two dollars where my mom gets it, and she is usually pretty good about finding good prices.”
        \n\n“That gives us some margin to work with. You could consider pricing above that. Since it will be more convenient for
        people to buy from you, they may be willing to pay two and a half dollars, for example. And you could consider pricing
        below that which may encourage people to start buying your bread instead of the other bread even for people in the
        neighboring town. However, you need to remember that you want your business to make a profit, and you have limited time.”
        \n\n“This makes sense.” Buzz paused and thought about what the Professor was teaching him.
        \n\n“One more thing. You do not need to worry too much about this right now while you are starting out, but this will
        become
        more important later. You should keep the business’s money separate from your own money. You ideally would have the
        business pay you a salary. That way the cost of your time is taken into consideration. Also, that way you also have a
        more clear idea of the business’s actual profits.”
        Buzz had a confused look on his face.
        \n\n“My apologies, Buzz. One step at a time. Do not worry about that yet.” The Professor said. “If you have not already, I
        would consider writing things down about your business. You can write out your plans, then include your costs and how
        you plan to price the bread.” The Professor knew this was a lot of information to a young, budding entrepreneur, but it
        was all so important, he thought. “That can be a homework assignment of sorts.”
        \n\nBuzz smiled. That is a homework assignment that he could be excited about. All of the numbers did seem daunting
        until he
        wrote them down, but despite that, Buzz felt good about his venture.
        \n\nBuzz wrote down his expenses that night before bed. Each loaf cost half of a dollar. Bread in the neighboring town cost
        two dollars. That would be his competition. Everyone in his town had to walk a long way to get to that bread, though.
    </string>
    <string name="part_6_option_1_bad1">
        Buzz chooses to price the bread at half a dollar per loaf.
    </string>
    <string name="part_6_option_2_good">
        Buzz chooses to price the bread at 2 dollars per loaf.
    </string>
    <string name="part_6_option_3_bad2">
        Buzz chooses to price the bread at 5 dollars per loaf.
    </string>
    <string name="part_10">
        Buzz continued to help others with his knowledge and his bakery. He never forgot the principles he learned nor those
        who taught him the principles. He was grateful that he had taken risks and grateful that he had taken them wisely. He
        was happy that he had chosen to help others. Those choices had made Buzz’s life a very, very happy one.
        \n\nThat is the end of this story, but there is a much more exciting story waiting for you: real life. What
        will you choose to do next?
    </string>
    <string name="theEndText">
        The End
    </string>
</resources>